kubernetes/Kubernetes_code/pod.yml
apiVersion: v1

kind: Pod

metadata:
  name: my-simplybyte-calculator-pod-2
  labels:
    project: calculator

spec:
  containers:
    - name: simply-byte-calculator
      image: simplebyte/simplybyte-calculator
      ports:
        - containerPort: 5000
