kubernetes/Kubernetes_code/probes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
        - name: calculator-app
          image: simplybyte/simplybyte-calculator:3.0
          ports:
            - containerPort: 5000

          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: simplybyte-volume
              mountPath: /usr/share/nginx/html

      volumes:
        - name: simplybyte-volume
          persistentVolumeClaim:
            claimName: simplybyte-pvc
